--- a/Projekt/Projekt.csproj
+++ b/Projekt/Projekt.csproj
@@ -43,26 +43,25 @@
     <Reference Include="FontAwesome.WPF, Version=4.7.0.37774, Culture=neutral, PublicKeyToken=0758b07a11a4f466, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.WPF.4.7.0.9\lib\net40\FontAwesome.WPF.dll</HintPath>
     </Reference>
-    <Reference Include="Google.Apis, Version=1.32.0.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
-      <HintPath>..\packages\Google.Apis.1.32.0\lib\net45\Google.Apis.dll</HintPath>
+    <Reference Include="Google.Apis, Version=1.32.2.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Apis.1.32.2\lib\net45\Google.Apis.dll</HintPath>
     </Reference>
-    <Reference Include="Google.Apis.Core, Version=1.32.0.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
-      <HintPath>..\packages\Google.Apis.Core.1.32.0\lib\net45\Google.Apis.Core.dll</HintPath>
+    <Reference Include="Google.Apis.Core, Version=1.32.2.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Apis.Core.1.32.2\lib\net45\Google.Apis.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Google.Apis.PlatformServices, Version=1.32.0.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
-      <HintPath>..\packages\Google.Apis.1.32.0\lib\net45\Google.Apis.PlatformServices.dll</HintPath>
+    <Reference Include="Google.Apis.PlatformServices, Version=1.32.2.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Apis.1.32.2\lib\net45\Google.Apis.PlatformServices.dll</HintPath>
     </Reference>
-    <Reference Include="Google.Apis.Webfonts.v1, Version=1.32.0.426, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
-      <HintPath>..\packages\Google.Apis.Webfonts.v1.1.32.0.426\lib\net45\Google.Apis.Webfonts.v1.dll</HintPath>
+    <Reference Include="Google.Apis.Webfonts.v1, Version=1.32.2.426, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Apis.Webfonts.v1.1.32.2.426\lib\net45\Google.Apis.Webfonts.v1.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="PropertyChanged, Version=2.2.4.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
-      <HintPath>..\packages\PropertyChanged.Fody.2.2.4.0\lib\net452\PropertyChanged.dll</HintPath>
+    <Reference Include="PropertyChanged, Version=2.5.3.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
+      <HintPath>..\packages\PropertyChanged.Fody.2.5.3\lib\net452\PropertyChanged.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
     <Reference Include="System.IO, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IO.4.3.0\lib\net462\System.IO.dll</HintPath>
@@ -86,10 +85,7 @@
       <HintPath>..\packages\System.Security.Cryptography.X509Certificates.4.3.2\lib\net461\System.Security.Cryptography.X509Certificates.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
@@ -103,47 +99,29 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Classes\Pair.cs" />
-    <Compile Include="Classes\RealTime.cs" />
+    <Compile Include="Classes\RealTimeEvaluation.cs" />
+    <Compile Include="Classes\Request.cs" />
     <Compile Include="Classes\Session.cs" />
-    <Compile Include="Classes\SessionCalculation.cs" />
-    <Compile Include="Enums\ListOfRequestTypes.cs" />
-    <Compile Include="GUI\ButtonWithImage.xaml.cs">
-      <DependentUpon>ButtonWithImage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="GUI\DataGridDisplayControl.xaml.cs">
-      <DependentUpon>DataGridDisplayControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="GUI\DataGridWithLabel.xaml.cs">
-      <DependentUpon>DataGridWithLabel.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="GUI\Design\DataGridDisplayDesign.cs" />
-    <Compile Include="GUI\Design\NewDataGridWithLabelDesign.cs" />
+    <Compile Include="Classes\SessionsGroup.cs" />
+    <Compile Include="GUI\Design\DataGridDesign.cs" />
+    <Compile Include="GUI\Design\DialogWindowDesign.cs" />
     <Compile Include="GUI\Design\SessionItemDesign.cs" />
     <Compile Include="GUI\Design\SessionItemListDesign.cs" />
-    <Compile Include="GUI\NewDataGridWithLabel.xaml.cs">
-      <DependentUpon>NewDataGridWithLabel.xaml</DependentUpon>
+    <Compile Include="GUI\DataGrid.xaml.cs">
+      <DependentUpon>DataGrid.xaml</DependentUpon>
     </Compile>
-    <Compile Include="GUI\SessionItem.cs" />
-    <Compile Include="GUI\SessionItemList.cs" />
     <Compile Include="Animations\MenuAnimation.cs" />
     <Compile Include="ViewModels\BasicViewModel.cs" />
-    <Compile Include="ViewModels\CommonViewModel.cs" />
-    <Compile Include="ViewModels\DataGridDisplayViewModel.cs" />
-    <Compile Include="ViewModels\NewDataGridWithLabelViewModel.cs" />
+    <Compile Include="ViewModels\DialogWindowViewModel.cs" />
+    <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="ViewModels\DataGridViewModel.cs" />
+    <Compile Include="ViewModels\SessionItemListViewModel.cs" />
     <Compile Include="ViewModels\SessionItemViewModel.cs" />
-    <Compile Include="ViewModels\SessionListViewModel.cs" />
-    <Compile Include="Windows\Design\InputDialogDesign.cs" />
-    <Compile Include="Windows\Design\WaitingScreenDesign.cs" />
-    <Compile Include="Windows\InfoWindow.xaml.cs">
+    <Compile Include="GUI\Windows\DialogWindow.xaml.cs">
+      <DependentUpon>DialogWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Windows\InfoWindow.xaml.cs">
       <DependentUpon>InfoWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\InputDialog.xaml.cs">
-      <DependentUpon>InputDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\ViewModels\InputDialogViewModel.cs" />
-    <Compile Include="Windows\ViewModels\WindowViewModel.cs" />
-    <Compile Include="Windows\WaitingScreen.xaml.cs">
-      <DependentUpon>WaitingScreen.xaml</DependentUpon>
     </Compile>
     <Page Include="Dictionaries\Buttons.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -169,15 +147,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="GUI\ButtonWithImage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="GUI\DataGridDisplayControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="GUI\NewDataGridWithLabel.xaml">
+    <Page Include="GUI\DataGrid.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -202,19 +172,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="GUI\DataGridWithLabel.xaml">
+    <Page Include="GUI\Windows\DialogWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Windows\InfoWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Windows\InputDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Windows\WaitingScreen.xaml">
+    <Page Include="GUI\Windows\InfoWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -236,7 +198,11 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
+    <Resource Include="Fonts\FontAwsome.ttf" />
+    <Resource Include="Fonts\FontMaterial.ttf" />
+    <None Include="WholeAppClassDiagram.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -258,12 +224,13 @@
   <ItemGroup>
     <SplashScreen Include="Resources\splashScreen.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Fody.2.3.17\build\net452\Fody.targets" Condition="Exists('..\packages\Fody.2.3.17\build\net452\Fody.targets')" />
+  <Import Project="..\packages\Fody.3.0.3\build\Fody.targets" Condition="Exists('..\packages\Fody.3.0.3\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Fody.2.3.17\build\net452\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.2.3.17\build\net452\Fody.targets'))" />
+    <Error Condition="!Exists('..\packages\Fody.3.0.3\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.3.0.3\build\Fody.targets'))" />
   </Target>
 </Project>
