--- a/Projekt/Projekt.csproj
+++ b/Projekt/Projekt.csproj
@@ -104,14 +104,22 @@
     <Compile Include="Classes\SessionsGroup.cs" />
     <Compile Include="GUI\Design\DataGridDesign.cs" />
     <Compile Include="GUI\Design\DialogWindowDesign.cs" />
+    <Compile Include="GUI\Design\EndResultsDesign.cs" />
     <Compile Include="GUI\Design\SessionItemDesign.cs" />
     <Compile Include="GUI\Design\SessionItemListDesign.cs" />
     <Compile Include="GUI\DataGrid.xaml.cs">
       <DependentUpon>DataGrid.xaml</DependentUpon>
     </Compile>
     <Compile Include="Animations\MenuAnimation.cs" />
+    <Compile Include="GUI\UserControls\EndResultsControl.xaml.cs">
+      <DependentUpon>EndResultsControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\UserControls\PlaceHolderControl.xaml.cs">
+      <DependentUpon>PlaceHolderControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ViewModels\BasicViewModel.cs" />
     <Compile Include="ViewModels\DialogWindowViewModel.cs" />
+    <Compile Include="ViewModels\EndResultsViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\DataGridViewModel.cs" />
     <Compile Include="ViewModels\SessionItemListViewModel.cs" />
@@ -158,7 +166,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="GUI\UserControls\EndResultsControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GUI\UserControls\PlaceHolderControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GUI\Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -167,7 +183,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Commands\RelayCommand.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="GUI\Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
