--- a/Projekt/Projekt.csproj
+++ b/Projekt/Projekt.csproj
@@ -95,20 +95,24 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Classes\DtmcGroup.cs" />
+    <Compile Include="Classes\Group.cs" />
     <Compile Include="Classes\ModelEvaluation.cs" />
+    <Compile Include="Classes\TestedGroup.cs" />
+    <Compile Include="Classes\TestedSession.cs" />
     <Compile Include="Enums\DetectionType.cs" />
     <Compile Include="Enums\ElementVerticalAligment.cs" />
     <Compile Include="Enums\IconType.cs" />
     <Compile Include="Classes\Request.cs" />
     <Compile Include="Classes\Session.cs" />
-    <Compile Include="Classes\SessionsGroup.cs" />
     <Compile Include="Enums\ElementHorizontalAlignment.cs" />
     <Compile Include="Enums\MenuItemType.cs" />
+    <Compile Include="Enums\SessionTypes.cs" />
     <Compile Include="ExtensionMethods\IconTypeExtensions.cs" />
     <Compile Include="GUI\Design\DataGridDesign.cs" />
     <Compile Include="GUI\Design\DialogWindowDesign.cs" />
-    <Compile Include="GUI\Design\ClassResultsDesign.cs" />
-    <Compile Include="GUI\Design\EndResultsDesign.cs" />
+    <Compile Include="GUI\Design\ResultsDesign.cs" />
+    <Compile Include="GUI\Design\PresentationScreenDesign.cs" />
     <Compile Include="GUI\Design\MenuDesignModel.cs" />
     <Compile Include="GUI\Design\SessionItemDesign.cs" />
     <Compile Include="GUI\Design\SessionItemListDesign.cs" />
@@ -119,11 +123,11 @@
     <Compile Include="GUI\UserControls\BasePopup.xaml.cs">
       <DependentUpon>BasePopup.xaml</DependentUpon>
     </Compile>
-    <Compile Include="GUI\UserControls\ClassResultsControl.xaml.cs">
-      <DependentUpon>ClassResultsControl.xaml</DependentUpon>
+    <Compile Include="GUI\UserControls\Results.xaml.cs">
+      <DependentUpon>Results.xaml</DependentUpon>
     </Compile>
-    <Compile Include="GUI\UserControls\EndResultsControl.xaml.cs">
-      <DependentUpon>EndResultsControl.xaml</DependentUpon>
+    <Compile Include="GUI\UserControls\PresentationScreenControl.xaml.cs">
+      <DependentUpon>PresentationScreenControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="GUI\UserControls\PlaceHolderControl.xaml.cs">
       <DependentUpon>PlaceHolderControl.xaml</DependentUpon>
@@ -140,8 +144,8 @@
     <Compile Include="ViewModels\BasePopupViewModel.cs" />
     <Compile Include="ViewModels\BasicViewModel.cs" />
     <Compile Include="ViewModels\DialogWindowViewModel.cs" />
-    <Compile Include="ViewModels\ClassResultsViewModel.cs" />
-    <Compile Include="ViewModels\EndResultsViewModel.cs" />
+    <Compile Include="ViewModels\ResultsViewModel.cs" />
+    <Compile Include="ViewModels\PresentationScreenViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\DataGridViewModel.cs" />
     <Compile Include="ViewModels\MenuItemViewModel.cs" />
@@ -194,11 +198,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="GUI\UserControls\ClassResultsControl.xaml">
+    <Page Include="GUI\UserControls\Results.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="GUI\UserControls\EndResultsControl.xaml">
+    <Page Include="GUI\UserControls\PresentationScreenControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
